[Upgrade] 增加移动端布局适配

--- a/src/assets/styles/layout.less
+++ b/src/assets/styles/layout.less
@@ -26,3 +26,11 @@ body {
     border-bottom: 1px solid #ddd;
   }
 }
+
+.el-message-box {
+  max-width: ~"calc(100% - 20px)";
+}
+
+.el-date-editor--daterange.mobile {
+  width: 100%;
+}
