[Upgrade] 优化登录界面样式

--- a/src/assets/styles/login.less
+++ b/src/assets/styles/login.less
@@ -16,6 +16,10 @@
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.2);
 
+    .el-dialog__body {
+      color: @loginFontColor;
+    }
+
     h1 {
       margin: 0
     }
