--- a/src/components/layout/Home.less
+++ b/src/components/layout/Home.less
@@ -1,10 +1,6 @@
 //全局变量
 @import "../../assets/styles/variable";
 
-table {
-  overflow: hidden !important;
-}
-
 .logo-con {
   height: 40px;
   padding: 10px;
@@ -73,4 +69,8 @@ table {
   justify-content: space-between;
   font-size: 14px;
   padding-right: 8px;
+}
+
+.dropdown-menu-content {
+  min-width: 88px;
 }
