[Upgrade] 优化顶部标题栏样式

--- a/src/assets/styles/variable.less
+++ b/src/assets/styles/variable.less
@@ -4,7 +4,11 @@
 @bgColor: #f5f7f9;
 
 //顶部标题栏高度
-@headerBerHeight: 60px;
+@headerBarHeight: 60px;
+//顶部标题栏背景颜色
+@headerBarBgColor: #001528;
+//顶部标题栏字体颜色
+@headerBarFontColor: #d4daf5;
 
 //标签栏高度
 @tagBarHeight: 30px;
