--- a/src/components/layout/header-bar/custom-bread-crumb/custom-bread-crumb.less
+++ b/src/components/layout/header-bar/custom-bread-crumb/custom-bread-crumb.less
@@ -1,5 +1,12 @@
+//全局变量
+@import "../../../../assets/styles/variable";
+
 .custom-bread-crumb {
   display: inline-block;
   vertical-align: top;
   margin-top: 25px;
+
+  .el-breadcrumb__inner {
+    color: @headerBarFontColor !important;
+  }
 }
