--- a/src/components/layout/header-bar/sider-trigger/sider-trigger.less
+++ b/src/components/layout/header-bar/sider-trigger/sider-trigger.less
@@ -1,3 +1,6 @@
+//全局变量
+@import "../../../../assets/styles/variable";
+
 .trans {
   transition: transform .2s ease;
 }
@@ -11,7 +14,7 @@
   height: @size;
   display: inline-block;
   text-align: center;
-  color: #5c6b77;
+  color: @headerBarFontColor !important;
   margin-top: 12px;
 
   i {
