--- a/src/components/layout/header-bar/custom-bread-crumb/custom-bread-crumb.less
+++ b/src/components/layout/header-bar/custom-bread-crumb/custom-bread-crumb.less
@@ -4,7 +4,8 @@
 .custom-bread-crumb {
   display: inline-block;
   vertical-align: top;
-  margin-top: 25px;
+  margin-top: 20px;
+  margin-left: 30px;
 
   .el-breadcrumb__inner {
     color: @headerBarFontColor !important;
