--- a/src/components/layout/header-bar/header-bar.less
+++ b/src/components/layout/header-bar/header-bar.less
@@ -7,6 +7,10 @@
   position: relative;
   background-color: @headerBarBgColor !important;
 
+  .header-bar-logo {
+    height: 60px;
+  }
+
   .custom-content-con {
     float: right;
     height: @headerBarHeight;
