--- a/src/components/layout/side-menu/sider-trigger/sider-trigger.less
+++ b/src/components/layout/side-menu/sider-trigger/sider-trigger.less
@@ -5,17 +5,15 @@
   transition: transform .2s ease;
 }
 
-@size: 40px;
+@size: 30px;
 .sider-trigger-link {
   font-size: 26px;
-  margin-left: 10px;
-  padding: 6px;
-  width: @size;
+  width: ~"calc(100%)";
   height: @size;
   display: inline-block;
   text-align: center;
+  margin-top: 5px;
   color: @headerBarFontColor !important;
-  margin-top: 12px;
 
   i {
     .trans;
